test/semantics/invalid/p6/X.java
package invalid.p6;

public class X<T extends Cloneable & Number> {

}
